# Efiko-v2

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/config/: __init__.py  settings.py
backend/app/database/: __init__.py  crud.py  supabase.py
backend/app/models/: auth.py  chat.py  document.py  user.py
backend/app/routes/: auth.py  chat.py  documents.py
backend/app/services/: auth_service.py  chat_service.py  rag_service.py
backend/app/tests/: __init__.py  test_auth.py  test_chat.py  test_documents.py
backend/app/utils/: helpers.py
deployment/: docker-compose.yml
frontend/: .env.local  package-lock.json  package.json  vercel.json
frontend/src/components/chat/: ChatInterface.tsx
frontend/src/components/documents/: DocumentUpload.tsx
frontend/src/components/layout/: MainLayout.tsx  Navbar.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: chat.tsx  documents.tsx  index.tsx  login.tsx  register.tsx
frontend/src/pages/api/: chat.ts
frontend/src/pages/api/auth/: register.ts
frontend/src/pages/api/documents/: upload.ts
